@@ -4,12 +4,15 @@ import com.sonymusic.carma.pp.jms.JMSMessageSender;
 import com.sonymusic.carma.pp.model.SendingDraStatistics;
 import com.sonymusic.carma.pp.persistence.entity.ContractIdUserExportedPair;
 import com.sonymusic.carma.pp.persistence.repository.CarmaRepository;
+import com.sonymusic.carma.pp.persistence.repository.ProtocolRepository;
 import com.sonymusic.carma.sapi.dra.message.MigrationMessage;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,11 +23,14 @@ public class SendToDraService {
 	private final MailService mailService;
 
 	private final CarmaRepository carmaRepository;
+	private final ProtocolRepository protocolRepository;
 	private final JMSMessageSender draExportJmsSender;
 
 	public void sendToDraByCountryCodes(List<String> countryCodes) {
 		log.info("Sending to DRA started with countries {}", countryCodes);
-		List<ContractIdUserExportedPair> contractIdUserExportedPairs = carmaRepository.getContractIdUserExportedPairByCountryIds(countryCodes);
+		Set<Integer> contractIdsToBeSend = protocolRepository.getContractIdsWhereNewDigitalRightExistsByCountryIds(
+			new HashSet<>(countryCodes));
+		List<ContractIdUserExportedPair> contractIdUserExportedPairs = carmaRepository.getContractIdUserExportedPairByContractIds(contractIdsToBeSend);
 		SendingDraStatistics statistics = sendDataToDRA(contractIdUserExportedPairs);
 		statistics.addCountryCodes(countryCodes);
 		mailService.sendStatusMailForSending(statistics);
@@ -33,8 +39,9 @@ public class SendToDraService {
 
 	public void sendToDraByContractsIds(List<Integer> contractIds) {
 		log.info("Sending to DRA started with contracts {}", contractIds);
-		List<ContractIdUserExportedPair> contractIdUserExportedPairs = //new ArrayList<>();//
-			carmaRepository.getContractIdUserExportedPairByContractIds(contractIds);
+		Set<Integer> contractIdsToBeSend = protocolRepository.getContractIdsWhereNewDigitalRightExistsByContractIds(
+			new HashSet<>(contractIds));
+		List<ContractIdUserExportedPair> contractIdUserExportedPairs = carmaRepository.getContractIdUserExportedPairByContractIds(contractIdsToBeSend);
 		SendingDraStatistics statistics = sendDataToDRA(contractIdUserExportedPairs);
 		mailService.sendStatusMailForSending(statistics);
 		log.info("Sending to DRA completed with contracts {}", contractIds);
@@ -42,16 +49,18 @@ public class SendToDraService {
 
 	private SendingDraStatistics sendDataToDRA(List<ContractIdUserExportedPair> contractIds) {
 		SendingDraStatistics statistics = new SendingDraStatistics();
-		List<Integer> userExportedContractIds = contractIds.stream().filter(item -> "Y".equals(item.getIsUserExported())).map(ContractIdUserExportedPair::getContractId)
-			.collect(Collectors.toList());
-		List<Integer> skippedContractIds = contractIds.stream().filter(item -> "N".equals(item.getIsUserExported())).map(ContractIdUserExportedPair::getContractId)
-			.collect(Collectors.toList());
-		statistics.addContractIds(userExportedContractIds);
-		statistics.setSkippedCount(skippedContractIds.size());
-		statistics.setSentCount(userExportedContractIds.size());
-		userExportedContractIds.forEach(contractId ->
-			draExportJmsSender.sendMessage(new MigrationMessage(contractId, MigrationService.MOD_USER))
-		);
+		if (!contractIds.isEmpty()) {
+			List<Integer> userExportedContractIds = contractIds.stream().filter(item -> "Y".equals(item.getIsUserExported())).map(ContractIdUserExportedPair::getContractId)
+				.collect(Collectors.toList());
+			List<Integer> skippedContractIds = contractIds.stream().filter(item -> "N".equals(item.getIsUserExported())).map(ContractIdUserExportedPair::getContractId)
+				.toList();
+			statistics.addContractIds(userExportedContractIds);
+			statistics.setSkippedCount(skippedContractIds.size());
+			statistics.setSentCount(userExportedContractIds.size());
+			userExportedContractIds.forEach(contractId ->
+				draExportJmsSender.sendMessage(new MigrationMessage(contractId, MigrationService.MOD_USER))
+			);
+		}
 		return statistics;
 	}
 
